<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">锐影回传客户端</string>
    <string name="preferences">设置</string>
    <string name="gatewayPrefTitle">目标服务器地址</string>
    <string name="port">传输端口</string>
    <string name="gatewayPrefDesc">设置视频发送的目标服务器地址</string>
    <string name="bitrate">码率</string>
    <string name="frameRate">帧率</string>
    <string name="resolution">分辨率</string>
    <string name="gop">GOP</string>
    <string name="errorToConnectHost">无法连接至</string>
    <string name="close">关闭</string>
    <string name="videoOn">开视频</string>
    <string name="videoOff">关视频</string>
    <string name="audioOn">开语音</string>
    <string name="audioOff">关语音</string>
    <string name="encodeRef">编码设置</string>
    <string name="audioDecoder">音频解码</string>
    <string name="showUUID">显示UUID</string>
    <string name="localRecord">本地录制</string>
</resources>
